Improved html building