@@ -2,19 +2,17 @@ package eu.girc.pis.html;
 
 import eu.girc.pis.components.Line;
 import eu.girc.pis.components.LineStation;
+import eu.girc.pis.components.Station;
 import eu.girc.pis.resources.Resource;
 import eu.girc.pis.util.EntityList;
 
-public class LineHtml extends Html {
+public class LineHtml {
 	
+	private static String linePreview = Resource.getTextFile("line-preview.html");
 	private static String lineComponent = Resource.getTextFile("line-component.html");
 	private static String stationComponent = Resource.getTextFile("line-station-component.html");
-
-	public LineHtml(Line line) {
-		super("Lines", buildLineHtml(line));
-	}
 	
-	public static String buildLineHtml(Line line) {
+	public static String buildLine(Line line) {
 		String string = lineComponent;
 		string = string.replace("{name}", line.getName());
 		string = string.replace("{displayName}", line.getDisplayName());
@@ -24,18 +22,59 @@ public class LineHtml extends Html {
 		string = string.replace("{departure}", line.getDeparture().toString("hh:mm"));
 		string = string.replace("{delay}", buildDelay(line.getDelay()));
 		line.calculateDepartueTimes();
-		if (line.getStations().getFirst() != null) string = string.replace("{firstStation}", line.getStations().getFirst().getDisplayName());
+		if (line.getStations().getFirst() != null) string = string.replace("{first.displayName}", line.getStations().getFirst().getDisplayName());
 		if (line.getStations().getLast() != null) {
-			string = string.replace("{arrival}", line.getStations().get(line.getStations().size() - 1).getDeparture().toString("hh:mm"));
-			string = string.replace("{last}", line.getStations().getLast().getName());
-			string = string.replace("{lastStation}", line.getStations().getLast().getDisplayName());
-			string = string.replace("{plattform}", Integer.toString(line.getStations().getLast().getPlattform()));
+			string = string.replace("{last.departure}", line.getStations().get(line.getStations().size() - 1).getDeparture().toString("hh:mm"));
+			string = string.replace("{last.name}", line.getStations().getLast().getName());
+			string = string.replace("{last.displayname}", line.getStations().getLast().getDisplayName());
+			string = string.replace("{last.plattform}", Integer.toString(line.getStations().getLast().getPlattform()));
 		}
-		string = string.replace("{content}", buildStationListHtml(line.getStations()));
+		string = string.replace("{content}", buildStationList(line.getStations()));
+		return Html.buildHtml("lines", string, true);
+	}
+	
+	public static String buildLineList(EntityList<Line> lines) {
+		if (lines.size() > 0) {
+			String string = "";
+			for (Line line : lines.sort()) {
+				string += buildLinePreview(line);
+			}
+			return Html.buildHtml("lines", string, true);
+		} else {
+			return new HtmlTag("div", "No lines found!", "box").toString();
+		}
+	}
+	
+	public static String buildLineList(Station station) {
+		EntityList<Line> lines = station.getLines();
+		if (lines.size() > 0) {
+			String string = "";
+			for (Line line : lines) {
+				string += buildLinePreview(line);
+			}
+			return string;
+		} else {
+			return new HtmlTag("div", "No lines found!", "box").toString();
+		}
+	}
+	
+	public static String buildLinePreview(Line line) {
+		String string = linePreview;
+		string = string.replace("{name}", line.getName());
+		string = string.replace("{displayName}", line.getDisplayName());
+		string = string.replace("{departure}", line.getDeparture().toString("hh:mm"));
+		string = string.replace("{delay}", LineHtml.buildDelay(line.getDelay()));
+		if (line.getStations().getFirst() != null) string = string.replace("{first.displayName}", line.getStations().getFirst().getDisplayName());
+		String stationList = "";
+		for (int i = 0; i < line.getStations().size() - 1; i++) {
+			stationList += line.getStations().get(i).getDisplayName() + " - ";
+		}
+		stationList += line.getStations().getLast().getDisplayName();
+		string = string.replace("{stations}", stationList);
 		return string;
 	}
 	
-	public static String buildDelay(int delay) {
+	private static String buildDelay(int delay) {
 		if (delay < 3) {
 			return "";
 		} else if (delay < 6) {
@@ -45,7 +84,7 @@ public class LineHtml extends Html {
 		}
 	}
 	
-	private static String buildStationListHtml(EntityList<LineStation> stations) {
+	private static String buildStationList(EntityList<LineStation> stations) {
 		String string = "";
 		for (int i = 0; i < stations.size() - 1; i++) {
 			String stationComponent = LineHtml.stationComponent;
